tensor experience replay 1st pass implemented

--- a/notebooks/test_tensor_ExpRep.ipynb
+++ b/notebooks/test_tensor_ExpRep.ipynb
@@ -122,7 +122,7 @@
      "output_type": "stream",
      "text": [
       "devices: compute: cuda:5; Experience Replay: cpu\n",
-      "Directory  /home/wfedorko/RL_sandbox/notebooks/../results//PongNoFrameskip-v4-2020_04_23_00:57:55  Created \n",
+      "Directory  /home/wfedorko/RL_sandbox/notebooks/../results//PongNoFrameskip-v4-2020_04_23_00:59:02  Created \n",
       "will save movies\n",
       "creating state memory with shape: [100000, 1, 84, 84]\n"
      ]
@@ -154,13 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "%lprun -f Engine.train_agent -f QNet_Agent.optimize -f SimpleCNNDuelingAllMean.forward -f ExperienceReplay.push -f ExperienceReplay.sample my_engine.train_agent()"
+    "## %lprun -f Engine.train_agent -f QNet_Agent.optimize -f SimpleCNNDuelingAllMean.forward -f ExperienceReplay.push -f ExperienceReplay.sample my_engine.train_agent()"
    ]
   },
   {
@@ -168,7 +168,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "my_engine.train_agent()"
+   ]
   }
  ],
  "metadata": {
